prod/ForgeRock/prod-fr-net-stack-ph1.yaml
---
# Brian Gaber
# ForgeRock 7 Upgrade Cloudformation Template
# Creates SGs, LBs between IG and NLBs, but does not create NLB Listeners or Target Groups.
# Also, does not create the SGs for the DS servers.
# NLB Listeners or Target Groups are created in Phase 2 when the IP addresses of the NLB are known.
Parameters:
  CreationDate:
    Description: Creation Date
    Type: String
    Default: "2022-03-10 10:50:00"
    AllowedPattern: "^\\d{4}(-\\d{2}){2} (\\d{2}:){2}\\d{2}$"
    ConstraintDescription: Date and time of creation
  Creator:
    Description: Name of Creator
    Default: Brian Gaber
    Type: String
  Application:
    Description: Application Name
    Default: Forgerock
    Type: String
  Owner:
    Description: Application Owner
    Default: Michael Graf
    Type: String
  prodForgeRockVpc:
    Description: Prod ForgeRock Public 161.108.207.0/24 CIDR VPC
    Default: vpc-fc294885
    Type: String
  prodForgeRockVpcPubSubnet1a:
    Description: Prod ForgeRock 161.108.207.0/26 Public Subnet1a
    Default: subnet-c70ae8a3
    Type: String
  prodForgeRockVpcPubSubnet1b:
    Description: Prod ForgeRock 161.108.207.64/26 Public Subnet1b
    Default: subnet-8867f8a4
    Type: String
  prodForgeRockVpcPrivSubnet1a:
    Description: Prod ForgeRock 161.108.207.128/26 Private Subnet1a
    Default: subnet-a1f61bc5
    Type: String
  prodForgeRockVpcPrivSubnet1b:
    Description: Prod ForgeRock 161.108.207.192/26 Private Subnet1b
    Default: subnet-c66df2ea
    Type: String
  prodIG1EC2:
    Description: Prod ForgeRock IG-1 Server Instance Id
    Default: i-0cbe557f8a3ae1150
    Type: String
  prodIG2EC2:
    Description: Prod ForgeRock IG-2 Server Instance Id
    Default: i-0b74036e282764cd3
    Type: String
  prodIDM1EC2:
    Description: Prod ForgeRock IDM-1 Server Instance Id
    Default: i-0085b46d32efc8356
    Type: String
  prodIDM1IPaddr:
    Description: Prod ForgeRock IDM-1 Server IP Address
    Default: 161.108.207.154/32
    Type: String
  prodIDM2EC2:
    Description: Prod ForgeRock IDM-2 Server Instance Id
    Default: i-016cfdb3bc3d7ddf1
    Type: String
  prodIDM2IPaddr:
    Description: Prod ForgeRock IDM-2 Server IP Address
    Default: 161.108.207.230/32
    Type: String
  prodAM1EC2:
    Description: Prod ForgeRock AM-1 Server Instance Id
    Default: i-0451d7935f5c92d0e
    Type: String
  prodAM2EC2:
    Description: Prod ForgeRock AM-2 Server Instance Id
    Default: i-04b3113bee212dbe9
    Type: String
  FrDplyEC2Ip:
    Description: ForgeRock Deployment Server IP Address
    Default: 161.108.207.143/32
    Type: String
    AllowedPattern: ^(([1-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]|32))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
  prodFRSG:
    Description: Prod ForgeRock Security Group
    Default: sg-fe6c548a
    Type: String
  prodAnyConnSG:
    Description: Prod AnyConnect Security Group
    Default: sg-0b79870e1e884e3a0
    Type: String
  prodRHCapSG:
    Description: Prod Redhat Capsule Security Group
    Default: sg-0fe71f41aa2d99016
    Type: String
  certArn:
    Description: ACM Certificate ARN
    Default: arn:aws:acm:us-east-1:122639376858:certificate/57b16521-b23f-4fcc-8f15-4b93c32d76da
    Type: String
  sslPolicyParam:
    Description: Load Balancer SSL Policy
    Default: ELBSecurityPolicy-TLS13-1-2-2021-06
    Type: String

Resources:  
  prodIgAlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access from the Internet
      GroupName: prod-ig-alb-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: allow https access from Internet
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: prodForgeRockVpc

  prodIntIgAlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access from Internal CompuCom
      GroupName: prod-int-ig-alb-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.0.0.0/8
          Description: allow https access from Internal CompuCom
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 172.16.0.0/12
          Description: allow https access from Internal CompuCom
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 192.168.0.0/16
          Description: allow https access from Internal CompuCom
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 161.108.0.0/16
          Description: allow https access from Internal CompuCom
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 150.124.0.0/16
          Description: allow https access to Service Now
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: prodForgeRockVpc

  prodIgSvrSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https from IG ALB
      GroupName: prod-fr-ig-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.16.0.0/14
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 131.99.0.0/16
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.251.4.0/23
          Description: allow ssh access from Shared
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 192.168.88.0/21
          Description: allow ssh access from CMPC VPN
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 445
          IpProtocol: tcp
          ToPort: 445
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8082
          IpProtocol: tcp
          ToPort: 8082
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8085
          IpProtocol: tcp
          ToPort: 8085
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 8443
          IpProtocol: tcp
          ToPort: 8443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: prodForgeRockVpc

  securitygroupigSvrfromFRProdsecuritygroupigAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from IG ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - prodIgSvrSecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - prodIgAlbSecurityGroup
          - GroupId
      ToPort: 8443

  securitygroupigSvrfromFRProdsecuritygroupIntigAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from Internal IG ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - prodIgSvrSecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - prodIntIgAlbSecurityGroup
          - GroupId
      ToPort: 8443

  prodIdmAmAlbsecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https access from IG Server to IDM and AM ALB
      GroupName: prod-idm-am-alb-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: prodForgeRockVpc

  securitygroupIdmAmAlbfromFRProdsecuritygroupIgSvr:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from IG Server to IDM and AM ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - prodIdmAmAlbsecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - prodIgSvrSecurityGroup
          - GroupId
      ToPort: 8443

  prodIdmSvrsecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https access from IDM ALB
      GroupName: prod-fr-idm-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.16.0.0/14
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 131.99.0.0/16
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.251.4.0/23
          Description: allow ssh access from Shared
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 192.168.88.0/21
          Description: allow ssh access from CMPC VPN
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 445
          IpProtocol: tcp
          ToPort: 445
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8082
          IpProtocol: tcp
          ToPort: 8082
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8085
          IpProtocol: tcp
          ToPort: 8085
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 8443
          IpProtocol: tcp
          ToPort: 8443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: prodForgeRockVpc

  securitygroupIdmSvrfromFRProdsecuritygroupIdmAmAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from IDM ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - prodIdmSvrsecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - prodIdmAmAlbsecurityGroup
          - GroupId
      ToPort: 8443

  prodAmSvrsecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow https access from AM ALB
      GroupName: prod-fr-am-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 10.16.0.0/14
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 131.99.0.0/16
          Description: allow ssh access from CMPC internal
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.251.4.0/23
          Description: allow ssh access from Shared
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 192.168.88.0/21
          Description: allow ssh access from CMPC VPN
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 445
          IpProtocol: tcp
          ToPort: 445
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8082
          IpProtocol: tcp
          ToPort: 8082
        - CidrIp: 10.17.2.249/32
          Description: allow McAfee EPO access from spw099epo02-new
          FromPort: 8085
          IpProtocol: tcp
          ToPort: 8085
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
        - CidrIp: !Ref FrDplyEC2Ip
          Description: allow from Deployment Server
          FromPort: 8443
          IpProtocol: tcp
          ToPort: 8443
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: prodForgeRockVpc

  securitygroupAmSvrfromFRProdsecuritygroupIdmAmAlb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow https access from AM ALB
      FromPort: 8443
      GroupId:
        Fn::GetAtt:
          - prodAmSvrsecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - prodIdmAmAlbsecurityGroup
          - GroupId
      ToPort: 8443

  prodRDSsecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to RDS from IDM Server
      GroupName: prod-rds-sec-group
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      VpcId:
        Ref: prodForgeRockVpc

  securitygrouprdsfromFRProdsecuritygroupidm:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: allow db access from IDM Server
      FromPort: 3306
      GroupId:
        Fn::GetAtt:
          - prodRDSsecurityGroup
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - prodIdmSvrsecurityGroup
          - GroupId
      ToPort: 3306

  ProdIgAppLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Name: prod-alb-fr-ig-internet
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - prodIgAlbSecurityGroup
            - GroupId
      Subnets:
        - Ref: prodForgeRockVpcPubSubnet1a
        - Ref: prodForgeRockVpcPubSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: application

  ProdIgAppLdBalListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: ProdIgAppLdBalTgtGrp
          Type: forward
      LoadBalancerArn:
        Ref: ProdIgAppLdBal
      Certificates:
        - CertificateArn: !Ref certArn
      Port: 443
      Protocol: HTTPS
      SslPolicy: !Ref sslPolicyParam

  ProdIgAppLdBalTgtGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15
      HealthCheckPath: /openig/ping
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200
      Name: prod-tg-fr-ig
      Port: 8443
      Protocol: HTTPS
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      TargetGroupAttributes: 
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
      Targets:
        - Id: !Ref prodIG1EC2
          Port: 8443
        - Id: !Ref prodIG2EC2
          Port: 8443
      TargetType: instance
      VpcId:
        Ref: prodForgeRockVpc

  ProdIntIgAppLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Name: prod-int-alb-fr-ig-internal
      Scheme: internal
      SecurityGroups:
        - Fn::GetAtt:
            - prodIntIgAlbSecurityGroup
            - GroupId
      Subnets:
        - Ref: prodForgeRockVpcPrivSubnet1a
        - Ref: prodForgeRockVpcPrivSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: application

  ProdIntIgAppLdBalListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: ProdIntIgAppLdBalTgtGrp
          Type: forward
      LoadBalancerArn:
        Ref: ProdIntIgAppLdBal
      Certificates:
        - CertificateArn: !Ref certArn
      Port: 443
      Protocol: HTTPS
      SslPolicy: !Ref sslPolicyParam

  ProdIntIgAppLdBalTgtGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15
      HealthCheckPath: /openig/ping
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200
      Name: prod-int-tg-fr-ig
      Port: 8443
      Protocol: HTTPS
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      TargetGroupAttributes: 
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
      Targets:
        - Id: !Ref prodIG1EC2
          Port: 8443
        - Id: !Ref prodIG2EC2
          Port: 8443
      TargetType: instance
      VpcId:
        Ref: prodForgeRockVpc

  ProdIdmAppLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Name: prod-alb-fr-idm-internal
      Scheme: internal
      SecurityGroups:
        - Fn::GetAtt:
            - prodIdmAmAlbsecurityGroup
            - GroupId
      Subnets:
        - Ref: prodForgeRockVpcPrivSubnet1a
        - Ref: prodForgeRockVpcPrivSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: application

  ProdIdmAppLdBalListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: ProdIdmAppLdBalTgtGrp
          Type: forward
      LoadBalancerArn:
        Ref: ProdIdmAppLdBal
      Certificates:
        - CertificateArn: !Ref certArn
      Port: 8443
      Protocol: HTTPS
      SslPolicy: !Ref sslPolicyParam

  ProdIdmAppLdBalTgtGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15
      HealthCheckPath: /openidm/info/ping
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200,401
      Name: prod-tg-fr-idm
      Port: 8443
      Protocol: HTTPS
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      TargetGroupAttributes: 
        - Key: stickiness.enabled
          Value: true
        - Key: stickiness.type
          Value: lb_cookie
      Targets:
        - Id: !Ref prodIDM1EC2
          Port: 8443
        - Id: !Ref prodIDM2EC2
          Port: 8443
      TargetType: instance
      VpcId:
        Ref: prodForgeRockVpc

  ProdAmAppLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
      Name: prod-alb-fr-am-internal
      Scheme: internal
      SecurityGroups:
        - Fn::GetAtt:
            - prodIdmAmAlbsecurityGroup
            - GroupId
      Subnets:
        - Ref: prodForgeRockVpcPrivSubnet1a
        - Ref: prodForgeRockVpcPrivSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: application

  ProdAmAppLdBalListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref ProdAmAppLdBalTgtGrp1
                Weight: 1
              - TargetGroupArn: !Ref ProdAmAppLdBalTgtGrp2
                Weight: 1
            TargetGroupStickinessConfig: 
              DurationSeconds: 86400
              Enabled: true
      LoadBalancerArn:
        Ref: ProdAmAppLdBal
      Certificates:
        - CertificateArn: !Ref certArn
      Port: 8443
      Protocol: HTTPS
      SslPolicy: !Ref sslPolicyParam

  ProdAmAppLdBalTgtGrp1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15
      HealthCheckPath: /openam/json/health/live
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200
      Name: prod-tg-fr-am-1
      Port: 8443
      Protocol: HTTPS
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Targets:
        - Id: !Ref prodAM1EC2
          Port: 8443
      TargetType: instance
      VpcId:
        Ref: prodForgeRockVpc

  ProdAmAppLdBalTgtGrp2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15
      HealthCheckPath: /openam/json/health/live
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200
      Name: prod-tg-fr-am-2
      Port: 8443
      Protocol: HTTPS
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Targets:
        - Id: !Ref prodAM2EC2
          Port: 8443
      TargetType: instance
      VpcId:
        Ref: prodForgeRockVpc

  ProdBlueNetLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
        - Key: load_balancing.cross_zone.enabled
          Value: "true"
      Name: prod-nlb-ds-usr-internal
      Scheme: internal
      Subnets:
        - Ref: prodForgeRockVpcPrivSubnet1a
        - Ref: prodForgeRockVpcPrivSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: network

  ProdBlueExtNetLdBal:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
        - Key: load_balancing.cross_zone.enabled
          Value: "true"
      Name: prod-nlb-ds-usr-external
      Scheme: internet-facing
      Subnets:
        - Ref: prodForgeRockVpcPubSubnet1a
        - Ref: prodForgeRockVpcPubSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: network

  ProdGreenNetLdBal1:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
        - Key: load_balancing.cross_zone.enabled
          Value: "true"
      Name: prod-nlb-ds-cfg-1-internal
      Scheme: internal
      Subnets:
        - Ref: prodForgeRockVpcPrivSubnet1a
        - Ref: prodForgeRockVpcPrivSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: network
  ProdGreenNetLdBal2:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      LoadBalancerAttributes:
        - Key: deletion_protection.enabled
          Value: "false"
        - Key: load_balancing.cross_zone.enabled
          Value: "true"
      Name: prod-nlb-ds-cfg-2-internal
      Scheme: internal
      Subnets:
        - Ref: prodForgeRockVpcPrivSubnet1a
        - Ref: prodForgeRockVpcPrivSubnet1b
      Tags: 
        - Key: Owner
          Value: !Ref Owner
        - Key: Application
          Value: !Ref Application
        - Key: Created
          Value: !Ref CreationDate
        - Key: Creator
          Value: !Ref Creator
      Type: network

Outputs:
  VPCID:
    Description: Prod ForgeRock VPC Identifier
    Value: !Ref prodForgeRockVpc
  PrivSubnet1A:
    Description: Prod ForgeRock Private Subnet1a
    Value: !Ref prodForgeRockVpcPrivSubnet1a
    Export:
      Name: ProdPrivSubnet1A
  PrivSubnet1B:
    Description: Prod ForgeRock Private Subnet1b
    Value: !Ref prodForgeRockVpcPrivSubnet1b
    Export:
      Name: ProdPrivSubnet1B
  IdGwSvrSecurityGroup:
    Description: ForgeRock Identity Gateway Server Security Group
    Value: !Ref prodIgSvrSecurityGroup
    Export:
      Name: ProdIdGwSvrVPCSecurityGroup
  IdmSvrSecurityGroup:
    Description: ForgeRock Identity Management Server Security Group
    Value: !Ref prodIdmSvrsecurityGroup
    Export:
      Name: ProdIdmSvrVPCSecurityGroup
  AmSvrSecurityGroup:
    Description: ForgeRock Access Management Server Security Group
    Value: !Ref prodAmSvrsecurityGroup
    Export:
      Name: ProdAmSvrVPCSecurityGroup
  RDSmysqlSecurityGroup:
    Description: RDS VPC Security Group
    Value: !Ref prodRDSsecurityGroup
    Export:
      Name: ProdRDSVPCSecurityGroup
  RDSmysqlSecurityGroupId:
    Description: RDS VPC Security Group Id
    Value:
      !GetAtt prodRDSsecurityGroup.GroupId
  IGextALBname:
    Description: Full name of the IG Internet Facing ALB
    Value:
      !GetAtt ProdIgAppLdBal.LoadBalancerFullName
  IGextALBDnsName:
    Description: DNS name of the IG Internet Facing ALB
    Value:
      !GetAtt ProdIgAppLdBal.DNSName
  IGintALBname:
    Description: Full name of the IG Internal ALB
    Value:
      !GetAtt ProdIntIgAppLdBal.LoadBalancerFullName
  IGintALBDnsName:
    Description: DNS name of the IG Internal ALB
    Value:
      !GetAtt ProdIntIgAppLdBal.DNSName
  IDMALBname:
    Description: Full name of the IDM Internal ALB
    Value:
      !GetAtt ProdIdmAppLdBal.LoadBalancerFullName
  IDMALBDnsName:
    Description: DNS name of the IDM Internal ALB
    Value:
      !GetAtt ProdIdmAppLdBal.DNSName
  AMALBname:
    Description: Full name of the AM Internal ALB
    Value:
      !GetAtt ProdAmAppLdBal.LoadBalancerFullName
  AMALBDnsName:
    Description: DNS name of the AM Internal ALB
    Value:
      !GetAtt ProdAmAppLdBal.DNSName
  BlueNLB:
    Description: ForgeRock Blue NLB
    Value: !Ref ProdBlueNetLdBal
    Export:
      Name: ProdBlueNlbArn
  BlueNLBname:
    Description: Full name of the Blue Internal NLB
    Value:
      !GetAtt ProdBlueNetLdBal.LoadBalancerFullName
  BlueNLBDnsName:
    Description: DNS name of the Blue Internal NLB
    Value:
      !GetAtt ProdBlueNetLdBal.DNSName
  BlueExtNLB:
    Description: ForgeRock Blue Internet Facing NLB
    Value: !Ref ProdBlueExtNetLdBal
    Export:
      Name: ProdBlueExtNlbArn
  BlueExtNLBname:
    Description: Full name of the Blue Internet Facing NLB
    Value:
      !GetAtt ProdBlueExtNetLdBal.LoadBalancerFullName
  BlueExtNLBDnsName:
    Description: DNS name of the Blue Internet Facing NLB
    Value:
      !GetAtt ProdBlueExtNetLdBal.DNSName
  GreenNLB1:
    Description: ForgeRock Green NLB 1
    Value: !Ref ProdGreenNetLdBal1
    Export:
      Name: ProdGreenNlb1Arn
  GreenNLB1name:
    Description: Full name of the Green Internal NLB 1
    Value:
      !GetAtt ProdGreenNetLdBal1.LoadBalancerFullName
  GreenNLB1DnsName:
    Description: DNS name of the Green Internal NLB 1
    Value:
      !GetAtt ProdGreenNetLdBal1.DNSName
  GreenNLB2:
    Description: ForgeRock Green NLB 2
    Value: !Ref ProdGreenNetLdBal2
    Export:
      Name: ProdGreenNlb2Arn
  GreenNLB2name:
    Description: Full name of the Green Internal NLB 2
    Value:
      !GetAtt ProdGreenNetLdBal2.LoadBalancerFullName
  GreenNLB2DnsName:
    Description: DNS name of the Green Internal NLB 2
    Value:
      !GetAtt ProdGreenNetLdBal2.DNSName
  StacksRegion:
    Value: !Ref "AWS::Region"
